force-app/main/default/objects/DIR_Inspection__c/DIR_Inspection__c.object-meta.xml
<CustomObject>
    <description>This object contains each inspection (Initial and Follow Up) against a BOFE Case.</description>
    <label>Inspection</label>
    <nameField>
        <displayFormat>INSP-{000000}</displayFormat>
        <label>Inspection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>