force-app/main/default/objects/DIR_Inspection__c/fields/Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>Begin_Date__c</fullName>
    <description>Time the inspection began</description>
    <inlineHelpText>Enter the time the inspection began</inlineHelpText>
    <label>Begin Time</label>
    <type>DateTime</type>
</CustomField>