force-app/main/default/objects/DIR_Inspection__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <formula>DIR_Case__r.Employer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity</label>
    <type>Text</type>
</CustomField>