force-app/main/default/objects/DIR_Inspection__c/fields/Inspection_Location__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection Location</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Inspections</relationshipLabel>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>