force-app/main/default/objects/DIR_Inspection__c/fields/Inspection_Location_Address__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Location_Address__c</fullName>
    <formula>IF((ISBLANK(Inspection_Location__r.Address__c)= FALSE), Inspection_Location__r.Address__c + ', ' + Inspection_Location__r.City__c + ', ' + TEXT(Inspection_Location__r.State__c) + Inspection_Location__r.Zip_Code__c, '')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspection Location Address</label>
    <type>Text</type>
</CustomField>