force-app/main/default/objects/DIR_Inspection__c/fields/Inspection_Location_DBA__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Location_DBA__c</fullName>
    <description>For Conga Document to pull in the DBA informaltion of the Location record.</description>
    <formula>Inspection_Location__r.DBA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspection Location DBA</label>
    <type>Text</type>
</CustomField>