force-app/main/default/objects/DIR_Inspection__c/fields/Inspection_Type__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Type__c</fullName>
    <description>Type of inspection. List narrowed by record type.</description>
    <inlineHelpText>Select the type of inspection being performed.</inlineHelpText>
    <label>Inspection Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Selective</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>LCI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>