force-app/main/default/objects/DIR_Inspection__c/fields/Location_Fax__c.field-meta.xml
<CustomField>
    <fullName>Location_Fax__c</fullName>
    <description>For the Inspection Report Conga Document to pull the jobsite address (Fax)</description>
    <formula>Inspection_Location__r.Fax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Fax</label>
    <type>Text</type>
</CustomField>