force-app/main/default/objects/DIR_Inspection__c/recordTypes/BOFE_Inspections.recordType-meta.xml
<RecordType>
    <fullName>BOFE_Inspections</fullName>
    <active>true</active>
    <description>Inspections performed by BOFE on DLSE cases</description>
    <label>BOFE Inspections</label>
</RecordType>